GEOMESA-3285 Update to GeoTools 30/Java 11 (#155)
* Remove hbase 1.x support
* Various dependency updates