@@ -4,7 +4,7 @@
 
     <groupId>org.geomesa.nifi</groupId>
     <artifactId>geomesa-nifi_2.12</artifactId>
-    <version>4.1.0-SNAPSHOT</version>
+    <version>5.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>GeoMesa-NiFi</name>
@@ -65,34 +65,35 @@
     </modules>
 
     <properties>
-        <geomesa.version>4.1.0-SNAPSHOT</geomesa.version>
+        <geomesa.version>5.0.0-SNAPSHOT</geomesa.version>
         <nifi.version>1.24.0</nifi.version>
 
-        <scala.version>2.12.17</scala.version>
+        <jdk.version>11</jdk.version>
+        <scala.version>2.12.18</scala.version>
         <scala.binary.version>2.12</scala.binary.version>
 
         <avro.version>1.11.3</avro.version>
         <guava.version>33.0.0-jre</guava.version>
 
         <!-- versions from geomesa -->
-        <gt.version>28.2</gt.version>
+        <gt.version>30.2</gt.version>
         <accumulo.version>2.0.1</accumulo.version>
         <thrift.version>0.12.0</thrift.version>
-        <zookeeper.version>3.7.2</zookeeper.version>
+        <zookeeper.version>3.9.1</zookeeper.version>
         <hadoop.version>3.3.6</hadoop.version>
         <hbase.version>2.5.7-hadoop3</hbase.version>
-        <hbase-1.version>1.4.14</hbase-1.version>
         <kafka.version>2.8.2</kafka.version>
         <zkclient.version>0.11</zkclient.version>
-        <postgres.version>42.7.0</postgres.version>
+        <postgres.version>42.7.2</postgres.version>
 
-        <curator.version>4.3.0</curator.version>
-        <netty.version>4.1.101.Final</netty.version>  <!-- NOTE: versions 4.1.102.Final+ break ConvertToGeoFileTest -->
+        <curator.version>5.6.0</curator.version>
+        <netty.version>4.1.106.Final</netty.version>
         <jetty.version>9.4.53.v20231009</jetty.version>
-        <fasterxml.jackson.version>2.15.3</fasterxml.jackson.version>
+        <fasterxml.jackson.version>2.16.1</fasterxml.jackson.version>
         <fasterxml.woodstox.version>5.4.0</fasterxml.woodstox.version> <!-- managed from 5.3.0 -->
         <commons.net.version>3.10.0</commons.net.version> <!-- managed from 3.1 -->
-        <commons.text.version>1.10.0</commons.text.version> <!-- NOTE: versions 1.11+ break the accumulo tests -->
+        <commons.text.version>1.11.0</commons.text.version>
+        <commons.lang3.version>3.14.0</commons.lang3.version>
         <wildfly.openssl.version>1.1.3.Final</wildfly.openssl.version> <!-- managed from 1.0.7.Final -->
         <gson.version>2.10.1</gson.version>
         <snappy-java.version>1.1.10.5</snappy-java.version> <!-- managed from 1.1.1.6 -->
@@ -124,7 +125,7 @@
         <test.postgis.docker.tag>15-3.4</test.postgis.docker.tag>
         <test.confluent.docker.tag>7.3.6</test.confluent.docker.tag> <!-- confluent 7.3.x corresponds to kafka 3.3.x -->
 
-        <maven.test.jvmargs>-Xms512m -Xmx4g -XX:-UseGCOverheadLimit</maven.test.jvmargs>
+        <maven.test.jvmargs>-Xms512m -Xmx4g -XX:-UseGCOverheadLimit --add-opens=java.base/java.nio=ALL-UNNAMED --illegal-access=warn</maven.test.jvmargs>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
@@ -844,6 +845,11 @@
                 <version>${commons.text.version}</version>
             </dependency>
             <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>${commons.lang3.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>org.apache.avro</groupId>
                 <artifactId>avro</artifactId>
                 <version>${avro.version}</version>
@@ -1181,8 +1187,8 @@
                              detects changes and re-compiles the Java files unless this
                              option is turned off.  -->
                         <useIncrementalCompilation>false</useIncrementalCompilation>
-                        <source>1.8</source>
-                        <target>1.8</target>
+                        <source>${jdk.version}</source>
+                        <target>${jdk.version}</target>
                     </configuration>
                 </plugin>
                 <plugin>
@@ -1208,9 +1214,10 @@
                             <arg>-unchecked</arg>
                             <arg>-deprecation</arg>
                         </args>
-                        <source>1.8</source>
-                        <target>1.8</target>
+                        <source>${jdk.version}</source>
+                        <target>${jdk.version}</target>
                         <scalaVersion>${scala.version}</scalaVersion>
+                        <recompileMode>incremental</recompileMode>
                     </configuration>
                 </plugin>
                 <plugin>
@@ -1509,7 +1516,6 @@
                             <groupId>net.alchim31.maven</groupId>
                             <artifactId>scala-maven-plugin</artifactId>
                             <configuration>
-                                <recompileMode>incremental</recompileMode>
                                 <useZincServer>true</useZincServer>
                             </configuration>
                         </plugin>
